--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
-
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-# ignore these plugins
-wp-content/plugins/hello.php
-
 # ignore specific themes
 wp-content/themes/twenty*/
 
@@ -17,3 +9,4 @@ node_modules/
 *.sql
 *.sqlite
 .wp-config.php
+.idea/*
